Style: Modificação Header

--- a/ProjetoTechJp/web/src/style/estilo.sass
+++ b/ProjetoTechJp/web/src/style/estilo.sass
@@ -1,14 +1,30 @@
-$titulo-color: blue
+$text: white
+
+body 
+    background-color: #262626
 
 .header
     display: flex
     align-items: center
     justify-content: space-evenly
+    color: $text
 
-
+.Barra
+    width: 450px
+    height: 40px
+    background: white
+    border-radius: 10px
+    
+    .Search
+        text-align: center
+        line-height: 2.4 
+        width: 80px
+        height: 40px
+        background: #1E66BA
+        border-radius: 0px 5px 0px   20px
+        position: relative
+        left: 370px
+  
 .carrinho
     display: flex
-
-    
-h1
-    color: blue
+    gap: 5px  
