--- a/ProjetoTechJp/web/src/assets/style/sass/modules/style.sass
+++ b/ProjetoTechJp/web/src/assets/style/sass/modules/style.sass
@@ -2,6 +2,8 @@ $text: white
 
 body 
     background-color: #262626
+    font-family: linden Hill
+    font-weight: 200
 
 .header
     display: flex
@@ -30,7 +32,25 @@ body
         width: 80px
         height: 40px
         background: #1E66BA
-        border-radius: 0px 5px 0px   20px     
+        border-radius: 0px 5px 0px   20px    
+        
 .carrinho
     display: flex
     gap: 5px  
+
+    
+.Navegação
+    background-color: #1E66BA
+    margin: auto
+    width: 81%
+    height: 37px
+    border-radius: 5px
+    font-family: linden Hill
+    .lista
+        display: flex
+        line-height: 40px
+        color: white
+        a
+            text-decoration: none
+            color: white
+        
