--- a/ProjetoTechJp/web/src/assets/style/sass/modules/style.css
+++ b/ProjetoTechJp/web/src/assets/style/sass/modules/style.css
@@ -5,6 +5,7 @@ body {
   font-weight: 200;
 }
 
+/*! estilo do component header  */
 .header {
   display: flex;
   align-items: center;
@@ -28,7 +29,7 @@ body {
   outline: none;
 }
 .Barra .all-categories {
-  width: 150px;
+  width: 160px;
   height: 40px;
   line-height: 2.7;
   position: relative;
@@ -60,15 +61,29 @@ body {
   cursor: pointer;
 }
 
-.carrinho {
+.Painel-login {
   display: flex;
-  gap: 5px;
+  gap: 50px;
+}
+.Painel-login h3 {
+  cursor: pointer;
 }
 
+.carrinho {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  cursor: pointer;
+}
+.carrinho img {
+  width: 29px;
+}
+
+/*! Estilo do Component Header  */
 .Navegação {
   background-color: #1E66BA;
   margin: auto;
-  width: 81%;
+  width: 82%;
   height: 37px;
   border-radius: 5px;
   font-family: linden Hill;
