--- a/ProjetoTechJp/web/src/assets/style/sass/modules/style.sass
+++ b/ProjetoTechJp/web/src/assets/style/sass/modules/style.sass
@@ -4,7 +4,7 @@ body
     background-color: #262626
     font-family: linden Hill
     font-weight: 200
-
+/*! estilo do component header 
 .header
     display: flex
     align-items: center
@@ -26,7 +26,7 @@ body
         &:focus
         outline: none
     .all-categories
-        width: 150px
+        width: 160px
         height: 40px
         line-height: 2.7
         position: relative
@@ -53,16 +53,25 @@ body
         background: #1E66BA
         border-radius: 0px 5px 0px   20px   
         cursor: pointer 
-        
+.Painel-login
+    display: flex 
+    gap: 50px
+    h3
+        cursor: pointer
 .carrinho
     display: flex
-    gap: 5px  
+    align-items: center
+    gap: 5px   
+    cursor: pointer
+    img
+        width: 29px
+     
 
-    
+/*! Estilo do Component Header 
 .Navegação
     background-color: #1E66BA
     margin: auto
-    width: 81%
+    width: 82%
     height: 37px
     border-radius: 5px
     font-family: linden Hill
