--- a/ProjetoTechJp/web/src/assets/style/sass/modules/style.sass
+++ b/ProjetoTechJp/web/src/assets/style/sass/modules/style.sass
@@ -55,7 +55,7 @@ body
         cursor: pointer 
 .Painel-login
     display: flex 
-    gap: 50px
+    gap: 20px
     h3
         cursor: pointer
 .carrinho
@@ -83,3 +83,22 @@ body
             text-decoration: none
             color: white
         
+
+/*! Slide-bar style
+
+.slide-bar 
+    background-color: #3a0aa8be
+    background: url(/home/sd_user/Documentos/jonh/Gitclone/ProjetoTechJp/ProjetoTechJp/web/src/assets/image/slidebarimgs/slide1.svg)
+    background-repeat: no-repeat
+    background-position: center top
+    margin-top: 50px
+    height: 450px
+
+/*! pagamentosprevi
+
+.pagamentosprevi
+    display: flex
+    align-items: center
+    justify-content: space-around
+
+
